产品物料主数据，增加所有外键字段组合 的 唯一性约束